--- a/z5/readme
+++ b/z5/readme
@@ -1,6 +1,6 @@
 Alias do uruchamiania serwera:
-alias serwer='uwsgi --ini login.ini'
-uwsgi --ini transfer.ini
+alias start-webapp='uwsgi --ini webapp.ini'
+alias start-dl='uwsgi --ini dl.ini'
 
 
 jwt - żetony
@@ -23,3 +23,8 @@ r.hset('pogodzip:login:' + sid, 'login')
 do 8.11
 
 ----------------------------------------------------------------
+
+Zmiana organizacji projektów, projekty nie są co tydzień
+Projekty na 2-3 tygodnie na ciekawsze tematy
+
+Czas na realizację poprzedniego projektu do 6 rano 9.11
